--- a/videoinfo/index.html
+++ b/videoinfo/index.html
@@ -15,11 +15,12 @@
     </form>
 
     <script>
+        const electron = require('electron')
+        const { ipcRenderer } = electron
+
         document.querySelector('form').addEventListener('submit', (event) => {
             event.preventDefault();
             const file = document.querySelector('input').files[0]
-
-            debugger
         })
     </script>
 </body>
