--- a/videoinfo/index.html
+++ b/videoinfo/index.html
@@ -14,6 +14,8 @@
         </button>
     </form>
 
+    <h1 id="result"></h1>
+
     <script>
         const electron = require('electron')
         const { ipcRenderer } = electron
@@ -23,6 +25,10 @@
             const { path } = document.querySelector('input').files[0]
 
             ipcRenderer.send('video:submit', path)
+        })
+
+        ipcRenderer.on('video:metadata', (event, duration) => {
+            document.querySelector('#result').innerHTML = `Video is ${duration} seconds`
         })
     </script>
 </body>
