--- a/todos/add.html
+++ b/todos/add.html
@@ -12,4 +12,12 @@
     </div>
     <button type="submit">Add</button>
   </form>
+
+  <script>
+    document.querySelector('form').addEventListener('submit', (event) => {
+      event.preventDefault()
+
+      debugger
+    })
+  </script>
 </body>
